# pulp-view-embed

./: .gitignore  CMakeLists.txt  COMPAT.md  DISTRIBUTING.md  README.md  pulp-package.json
.github/workflows/: ci.yml
cmake/: pulp_view_embedConfig.cmake.in
docs/: overlay-and-resize.md
examples/macos-nsview-smoke/: bundle_render.mm  design_render.mm  smoke.mm
fixtures/: README.md
fixtures/figma-vst-style/: design.ir.json  design2.ir.json  scene.pulp.json
fixtures/figma-vst-style/bundle/: ui.js  ui.js.meta.json
fixtures/synthetic/: design.ir.json
include/: pulp_view_embed.h  pulp_view_embed_native.hpp
src/: embed_processors.hpp  frame_gate.hpp  host_param_kinds.hpp  pulp_view_embed.cpp  pulp_view_embed.exp
tools/: frame_gate_test.cpp  hit_point_test.cpp  param_key_test.cpp  pulp_embed_validate.cpp
